<resources>
    <string name="app_name">Soccer Match</string>
    <string name="app_header">APLAS SOCCER BOARD</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="home_nameHint">Enter home team name</string>
    <string name="away_nameHint">Enter away team name</string>
    <string name="hint">add 11 players</string>
    <string name="btn_next">Next</string>
    <string name="player">0 player(s)</string>
    <string name="play_title">Soccer Match Score</string>
    <string name="start_score">0</string>
    <string name="versus">VS</string>
    <string name="start_time">00:00:00</string>
    <string name="btn_start">Start</string>
    <string name="btn_finish">Finish</string>
    <string name="home_score">Home Team: 3</string>
    <string name="away_score">Away Team: 1</string>
    <string name="new_match">New Match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="footer">Soccer Last News:</string>
</resources>