<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/matchResultTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_score"
        android:textColor="@color/light_yellow"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:background="@color/purple_500"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/matchScoreTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/away_score"
        android:textColor="@color/light_yellow"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:background="@color/dark_green"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logRcView"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        app:cardCornerRadius="7dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_match"
            android:textStyle="bold"
            android:background="@color/pink"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawablePadding="20dp"
            android:padding="10dp"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>