<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_smokes"
    tools:context=".PlayActivity">

    <androidx.cardview.widget.CardView
    android:id="@+id/playTitleCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="6dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/playTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_orange"
            android:text="@string/play_title"
            android:textAlignment="center"
            android:textColor="@color/light_yellow"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/baby_blue"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/homeTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_700"
                android:text="@string/home_team"
                android:textAlignment="center"
                android:textColor="@color/light_yellow"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/homeLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/teamlogo"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/homeScore"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/start_score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="72sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/addHomeScore"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_goal" />

                <ImageButton
                    android:id="@+id/addHomeYellow"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/icon_yellow_card"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />

                <ImageButton
                    android:id="@+id/addHomeRed"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_red_card" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versus"
            android:textColor="@color/dark_purple"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/baby_green"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/awayTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_green"
                android:text="@string/away_team"
                android:textAlignment="center"
                android:textColor="@color/light_yellow"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/awayLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:src="@drawable/teamlogo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/awayScore"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/start_score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="72sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/addAwayScore"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/icon_goal"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />

                <ImageButton
                    android:id="@+id/addAwayYellow"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/icon_yellow_card"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />

                <ImageButton
                    android:id="@+id/addAwayRed"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/icon_red_card"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/timerShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_margin="10dp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="7dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/matchStartBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:enabled="true"
                android:padding="10dp"
                android:text="@string/btn_start"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="7dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/matchFinishBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_finish"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:enabled="false"
                android:padding="10dp"
                android:background="@color/pink"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>