<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_smokes"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/mainTitleCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mainTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_header"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/light_yellow"
            android:background="@color/red_orange"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/homeTeamCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp"
        android:backgroundTint="@color/baby_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/homeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_team"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/light_yellow"
                android:gravity="center"
                android:background="@color/purple_700"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="270dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/homeTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/home_nameHint"
                        android:layout_gravity="center"/>

                    <ImageButton
                        android:id="@+id/homeImage"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/teamlogo"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/homePlayerNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/player"
                            android:textColor="@color/dark_purple"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_gravity="left"/>

                        <Space
                            android:layout_width="50sp"
                            android:layout_height="25sp"/>

                        <ImageButton
                            android:id="@+id/addHomePlayer"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:scaleType="fitEnd"
                            android:src="@drawable/icon_add_button"
                            android:layout_gravity="right"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/light_babyblue">

                    <ListView
                        android:id="@+id/homePlayer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dividerHeight="1dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/awayTeamCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/baby_green">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/awayLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/away_team"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/light_yellow"
                android:background="@color/dark_green"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="270dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/awayTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/away_nameHint"
                        android:layout_gravity="center"/>

                    <ImageButton
                        android:id="@+id/awayImage"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/teamlogo"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/awayPlayerNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/player"
                            android:textColor="@color/dark_purple"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_gravity="left" />
                        <Space
                            android:layout_width="50sp"
                            android:layout_height="25sp"/>

                        <ImageButton
                            android:id="@+id/addAwayPlayer"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:scaleType="fitEnd"
                            android:src="@drawable/icon_add_button"
                            android:layout_gravity="right"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/light_babygreen">

                    <ListView
                        android:id="@+id/awayPlayer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dividerHeight="1dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/pink"
        android:text="@string/btn_next"
        android:textColor="@color/light_yellow"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:layout_margin="5dp"/>
</LinearLayout>